perbaikan register user

--- a/Views/register.ejs
+++ b/Views/register.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align: center">User Register</h1>
     <div class="container-fluid">
-        <form>
+        <form method="POST" action="/user">
             <div class="form-group">
                 <label for="formGroupExampleInput">Nama:</label>
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nama" name="name">
