--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -132,6 +132,7 @@
         #plus-sign-container {
             display: flex;
             justify-content: center;
+            margin-bottom: 30px;
         }
 
         #plus-sign-circle {
@@ -172,25 +173,12 @@
                 
                 <section>
                     <div class="invoice-item">
-                        <div class="icon-circle circle-ea">
-                            <i class="fab fa-etsy icon-ea"></i>
+                        <div class="icon-circle circle-soundcloud">
+                            <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
                         </div>
                         <div class="invoice-biz-date">
-                            <p>EA Games</p>
-                            <p class="light-text">Sat, 17 May</p>
+                            <p>Book's Name</p>
                         </div>
-                        <p class="price"><span class="light-text">$</span>209.87<p>
-                    </div>
-                    
-                    <div class="invoice-item">
-                        <div class="icon-circle circle-envato">
-                            <i class="fab fa-envira icon-envato" aria-hidden="true"></i>
-                        </div>
-                        <div class="invoice-biz-date">
-                            <p>Envato</p>
-                            <p class="light-text">Fri, 26 May</p>
-                        </div>
-                        <p class="price"><span class="light-text">$</span>13.9<p>
                     </div>
                     
                     <div class="invoice-item">
@@ -198,30 +186,35 @@
                             <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
                         </div>
                         <div class="invoice-biz-date">
-                            <p>Soundcloud</p>
-                            <p class="light-text">Tue, 30 May</p>
+                            <p>Book's Name</p>
                         </div>
-                        <p class="price"><span class="light-text">$</span>40<p>
                     </div>
+                    
                     <div class="invoice-item">
-                            <div class="icon-circle circle-soundcloud">
-                                <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
-                            </div>
-                            <div class="invoice-biz-date">
-                                <p>Soundcloud</p>
-                                <p class="light-text">Tue, 30 May</p>
-                            </div>
-                            <p class="price"><span class="light-text">$</span>40<p>
-                        </div>
-                        <div class="invoice-item">
                         <div class="icon-circle circle-soundcloud">
                             <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
                         </div>
                         <div class="invoice-biz-date">
-                            <p>Soundcloud</p>
-                            <p class="light-text">Tue, 30 May</p>
+                            <p>Book's Name</p>
                         </div>
-                        <p class="price"><span class="light-text">$</span>40<p>
+                    </div>
+
+                    <div class="invoice-item">
+                        <div class="icon-circle circle-soundcloud">
+                            <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
+                        </div>
+                        <div class="invoice-biz-date">
+                            <p>Book's Name</p>
+                        </div>
+                    </div>
+
+                    <div class="invoice-item">
+                        <div class="icon-circle circle-soundcloud">
+                            <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
+                        </div>
+                        <div class="invoice-biz-date">
+                            <p>Book's Name</p>
+                        </div>
                     </div>
                 </section>
                 <div id="plus-sign-container">
@@ -230,5 +223,5 @@
                     </div>
                 </div>
             </main>
-</body>
+    </body>
 </html>
