adding middleware and session

--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -84,6 +84,7 @@
 
         .price {
             font-size: 1.25em;
+            margin-right: 20px;
         }
 
         .invoice-biz-date {
@@ -172,6 +173,16 @@
                 </header>
                 
                 <section>
+                        <div class="invoice-item">
+                            <div class="icon-circle circle-soundcloud">
+                                <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
+                            </div>
+                            <div class="invoice-biz-date">
+                                <p>Book's Name</p>
+                            </div>
+                            <p class="price"><span class="light-text">-</span></p>
+                        </div>
+                    
                     <div class="invoice-item">
                         <div class="icon-circle circle-soundcloud">
                             <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
@@ -179,6 +190,7 @@
                         <div class="invoice-biz-date">
                             <p>Book's Name</p>
                         </div>
+                        <p class="price"><span class="light-text">-</span></p>
                     </div>
                     
                     <div class="invoice-item">
@@ -188,15 +200,7 @@
                         <div class="invoice-biz-date">
                             <p>Book's Name</p>
                         </div>
-                    </div>
-                    
-                    <div class="invoice-item">
-                        <div class="icon-circle circle-soundcloud">
-                            <i class="fab fa-mixcloud icon-soundcloud" aria-hidden="true"></i>
-                        </div>
-                        <div class="invoice-biz-date">
-                            <p>Book's Name</p>
-                        </div>
+                        <p class="price"><span class="light-text">-</span></p>
                     </div>
 
                     <div class="invoice-item">
@@ -206,6 +210,7 @@
                         <div class="invoice-biz-date">
                             <p>Book's Name</p>
                         </div>
+                        <p class="price"><span class="light-text">-</span></p>
                     </div>
 
                     <div class="invoice-item">
@@ -215,6 +220,7 @@
                         <div class="invoice-biz-date">
                             <p>Book's Name</p>
                         </div>
+                        <p class="price"><span class="light-text">-</span></p>
                     </div>
                 </section>
                 <div id="plus-sign-container">
