--- a/views/login_form.ejs
+++ b/views/login_form.ejs
@@ -155,7 +155,7 @@
     <div id="login">
         <form>
           <h1>Sign In</h1>
-          <input type="text" placeholder="Username">
+          <input type="text" placeholder="Email">
           <input type="password" placeholder="Password">
           <button>Sign in</button>
         </form>
