--- a/views/login_form.ejs
+++ b/views/login_form.ejs
@@ -153,10 +153,10 @@
 </head>
 <body>
     <div id="login">
-        <form>
+        <form method="POST" action="">
           <h1>Sign In</h1>
-          <input type="text" placeholder="Email">
-          <input type="password" placeholder="Password">
+          <input type="text" placeholder="Email" name="email">
+          <input type="password" placeholder="Password" name="password">
           <button>Sign in</button>
         </form>
       </div>
