--- a/views/registration_form.ejs
+++ b/views/registration_form.ejs
@@ -153,12 +153,12 @@
 </head>
 <body>
     <div id="register">
-        <form>
+        <form method="POST" action="">
           <h1>Sign Up</h1>
-          <input type="text" placeholder="Username">
-          <input type="password" placeholder="Password">
-          <input type="email" placeholder="Email">
-          <button>Register</button>
+          <input type="text" placeholder="Name" name="name">
+          <input type="email" placeholder="Email" name="email">
+          <input type="password" placeholder="Password" name="password">
+          <button type="submit">Register</button>
         </form>
       </div>
 </body>
