edit checkout button

--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -34,7 +34,7 @@
             border-radius: 10px;
             box-shadow: 
                 0 10px 40px -10px rgba(0, 0, 0, 0.5),
-                20px 20px 0px 0 rgba(242, 183, 177) 
+                20px 20px 0px 0 rgb(220, 224, 165) 
                 ;
         }
 
@@ -95,50 +95,16 @@
             color: #8997a2;
         }
 
-        /* Icons */
-
-        .icon-circle {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-left: 10px;
-        }
-
-        .icon-ea{
-            color: #2493ed;
-            font-size: 30px;
-        }
-        .icon-envato {
-            color: #7dae41;
-            font-size: 30px;	
-        }
-        .icon-soundcloud {
-            color: #ff9400;
-            font-size: 30px;	
-        }
-        .circle-ea {
-            background-color: #e8f5fd;
-        }
-        .circle-envato {
-            background-color: #f3f6ed;
-        }
-        .circle-soundcloud {
-            background-color: #fff4e6;
-        }
-
         /* Plus Sign */
-        #plus-sign-container {
+        #button-sign-container {
             display: flex;
             justify-content: center;
             margin-bottom: 30px;
         }
 
-        #plus-sign-circle {
-            width: 60px;
-            height: 60px;
+        #button-sign-circle {
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
             background-color: #a7f4f7;
             display: flex;
@@ -147,11 +113,11 @@
             transition: background-color 300ms;
         }
 
-        #plus-sign-circle:hover {
+        #button-sign-circle:hover {
             background-color: #62d6eb;
         }
 
-        .plus-sign {
+        .button-sign {
             color: white;
             font-size: 30px;
         }
@@ -223,8 +189,8 @@
                         <p class="price"><span class="light-text">-</span></p>
                     </div>
                 </section>
-                <div id="plus-sign-container">
-                    <div id="plus-sign-circle">
+                <div id="button-sign-container">
+                    <div id="button-sign-circle">
                         <a href="#">Checkout</a>
                     </div>
                 </div>
