--- a/Views/startbootstrap-shop-homepage-gh-pages/index.ejs
+++ b/Views/startbootstrap-shop-homepage-gh-pages/index.ejs
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container" >
-      <a class="navbar-brand" href="#">Online Library</a>
+      <a class="navbar-brand" href="/">Online Library</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -64,7 +64,7 @@
         <h1 class="my-4">Perpustakaan Online</h1>
         <div class="list-group">
           <% for(let i = 0; i<categories.length; i++){ %>
-          <a href="#" class="list-group-item"><%= categories[i].category %></a>
+          <a href="/<%= categories[i].id %>" class="list-group-item"><%= categories[i].category %></a>
           <%}%>
         </div>
 
