--- a/Views/register.ejs
+++ b/Views/register.ejs
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
     <title>User Register</title>
 </head>
 <body>
+    <%- include('./Partials/navBar') %>
     <h1 style="text-align: center">User Register</h1>
     <div class="container-fluid">
         <form method="POST" action="/user">
@@ -27,5 +29,6 @@
             <button type="submit" class="btn btn-primary">Daftar</button>
         </form>
     </div>
+
 </body>
 </html>
