--- a/Views/startbootstrap-shop-homepage-gh-pages/index.ejs
+++ b/Views/startbootstrap-shop-homepage-gh-pages/index.ejs
@@ -29,34 +29,8 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container" >
-      <a class="navbar-brand" href="/">Magnanimous</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/book/cart">Cart</i></a>
-          </li>
-          <% if(!login){ %>
-          <li class="nav-item">
-              <a class="nav-link" href="/user/">Sign Up</a>
-            </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/user/login">Login</a>
-          </li>
-          <% } 
-          else{ %>
-            <li class="nav-item">
-              <a class="nav-link" href="/user/logout">Logout</a>
-            </li>
-          <% } %>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <%- include('../Partials/navBar') %>
+  
 
   <!-- Page Content -->
   <div class="container" style="margin-top: 50px">
@@ -158,13 +132,7 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Hacktiv8</p>
-      <p class="m-0 text-center text-white">Infinite Fox: Indra Aditya, Andreas Holiwono</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  <%- include('../Partials/footer') %>
 
   <!-- Bootstrap core JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
